# titan-bash

./: .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  PACKAGING.md  README.md  THIRD_PARTY_NOTICES.md  WHY_TITAN_BASH.md
.github/workflows/: windows-release.yml
installer/: titan-bash.iss
scripts/: package.cmd  package.ps1
src/: interrupt.rs  lib.rs  main.rs
src/compat/: mod.rs
src/shell/: builtin.rs  busybox.rs  completer.rs  executor.rs  input.rs  mod.rs  parser.rs  path.rs  path_part1.txt  venv.rs
src/task/: mod.rs
src/tui/: mod.rs
